--- a/app/views/acknowledgments/new.html.erb
+++ b/app/views/acknowledgments/new.html.erb
@@ -19,15 +19,15 @@
       <% end %>
     </div>
     <div class="flex-1 flex justify-center">
-      <div class="p-4 w-2/5 flex flex-col justify-between items-center max-w-32 bg-white shadow-md sm:px-8">
+      <%= link_to(set_duration_user_hugs_path(@user), class: 'p-4 w-2/5 flex flex-col justify-between items-center max-w-32 bg-white shadow-md sm:px-8') do %>
         <%= image_pack_tag('heart.svg', class: 'w-full my-auto') %>
         <p class="mt-3">Hug</p>
-      </div>
+      <% end %>
     </div>
   </div>
   <div class="w-full mt-8">
     <div class="mx-auto w-full max-w-72 sm:max-w-92">
-      <%= image_pack_tag('empty_state.svg', class: 'w-full') %>
+      <%= image_pack_tag('empty-state.svg', class: 'w-full') %>
     </div>
   </div>
 </div>
