--- a/app/views/layouts/no_login.html.erb
+++ b/app/views/layouts/no_login.html.erb
@@ -13,6 +13,7 @@
   <body>
     <div class="bg-gray-50 font-roboto">
       <%= render partial: 'shared/navbar_no_login', locals: {user: @user} %>
+      <%= react_component('alerts', alerts: flash) if flash.present? %>
       <div class="mt-16 max-w-7xl mx-auto">
         <div class="grid grid-cols-12 gap-1 px-4">
           <main class="col-span-full">
