--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -25,6 +25,7 @@
           </div>
         </div>
       </header>
+      <%= react_component('alerts', alerts: flash) if flash.present? %>
       <div class="mt-16 max-w-7xl mx-auto">
         <div class="grid grid-cols-12 gap-1 px-4">
           <main class="col-span-full">
